# pargo

./: Cargo.toml  README.md
examples/echo/: Pargo.toml
examples/echo/src/: main.asm  std.inc  tty.inc
lda/: Cargo.toml
pargo/: Cargo.toml
pargo/src/: conf.rs  env.rs  lib.rs  main.rs
ptap/: Cargo.toml
ptap/src/: main.rs
